--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 	
     <div class="col-sm-8 text-left"> 
 	
-		<h2>An Introduction to Atmel Arm Cortex M4: ATSAM4S</h2>
+		<h2>An Introduction to Atmel Arm Cortex M4: ATSAM4S Nataly</h2>
 		
 		<p>This introduction to the ATSAM4S series of Microchip arm microcontrollers will help you get started programming without using <abbr title="Atmel Software Framework">ASF</abbr>.  Although the ASF is good, especially when you're porting code from one chip to another, I wanted to directly setup peripherals by setting registers directly rather than having the hardware abstracted away.  These tutorials assume that you already have some C experience and have programmed other microcontrollers such as the AVR or XMEGA.<br><br>
 		Keep in mind that these examples are the bare minimum required to get started.  You should really go through the datasheet to check for other options, power saving techniques and chapters that aren't covered under this basic tutorial.  This is still a work in progress and there should be new content weekly.  If you have any requests for things you would like to see then feel free to send me an email at <a href='mailto:rmcmillin@mwmw.ca?subject=mwmw.ca:%20ATSAM4S%20Question' class='bodylink'>rmcmillin@mwmw.ca</a>.</p>
